--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
   "author": "Brian M Hunt <bmh@tko.io>",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "algoliasearch": "^3.29.0"
+  "dependencies": {},
+  "scripts": {
+    "test": "yarn run mocha --reporter spec",
+    "watch": "yarn run mocha -w --reporter spec"
   },
   "devDependencies": {
-    "directory-named-webpack-plugin": "^4.0.0",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0"
+    "chai": "^4.1.2",
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.2",
+    "firebase-functions-test": "^0.1.3",
+    "firebase-tools": "^4.0.2",
+    "mocha": "^5.2.0"
   }
 }
