--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "author": "Brian M Hunt <bmh@tko.io>",
   "license": "MIT",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@firebase/testing": "^0.3.3",
+    "firebase": "^5.5.9",
+    "jest": "^23.6.0"
+  },
   "scripts": {
-    "test": "yarn run mocha --reporter spec",
-    "watch": "yarn run mocha -w --reporter spec"
+    "test": "node_modules/.bin/jest --config ./jest.config.json",
+    "emulator": "yarn run firebase serve --only firestore"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "firebase-admin": "^5.13.1",
-    "firebase-functions": "^2.0.2",
-    "firebase-functions-test": "^0.1.3",
-    "firebase-tools": "^4.0.2",
-    "mocha": "^5.2.0"
+    "firebase-admin": "^6.2.0",
+    "firebase-functions": "^2.1.0",
+    "firebase-functions-test": "^0.1.5",
+    "firebase-tools": "^6.1.1"
   }
 }
