echo gcloud account

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+- name: gcr.io/cloud-builders/gcloud-slim
+  args: ['config', 'get-value', 'account']
+
 - name: "node:10"
   entrypoint: bash
   args: ["run.sh"]
